styles/style.scss
/* ... */
.message-content {
  line-height: 1.375rem;
  padding-top: 1px;
  padding-bottom: 2px;
}

.message-gutter {
  position: absolute;
  left: 0;
  width: 3.875rem;
  padding-right: 0.625rem;
  text-align: right;
  
  .filled-star {
    margin-right: -2px;
  }
}

.lead-message {
  // padding-top: 0.5rem;
}

.lead-message-header {
  line-height: 1.125rem;
  padding-top: 0.25rem;
}

.lead-message-gutter {
  top: 0;
}

.sender {
  font-weight: 900;
  margin-right: 0.35rem;
}

.timestamp {
  font-size: 0.75rem;
  font-weight: 300;
  margin-right: 0.15rem;
  color: $aside-info-color;
}

.channel-header {
  margin-left: 220px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 3.075rem;
  padding-top: 0.7rem;
  width: auto;
  border-bottom: 1px solid $divider-color;
  padding-left: 1.3rem;
  background: #fff;
  white-space: nowrap;
  min-width: 600px;
  z-index:20;
  &:hover {
    .star-toggle {
      visibility: visible;
    }
  }
}

.channel-title {
  float: left;
  max-width: 200px;
  text-overflow: ellipses;
}

.lock {
  display: inline-block;
  vertical-align: -1.5%;
}

.lock.CH {
  margin-left: -2px;
  
}

.lock.CS {
  margin-left: -0.8px;
  fill: $cs-text-color;
  opacity: 0.5;
}

.channel-header-name {
  font-weight: 900;
  color: #2c2d30;
  font-size: 1.125rem;
  margin-left: 2px;
}

.star-toggle {
  display: inline-block;
  margin-left: 5px;
  vertical-align: -2%;
  visibility: hidden;
  fill: #9e9ea6;
  
  &:hover {
    fill: #F8CF34;
  }
  
  img {
    margin-left: -1px;
    visibility: visible;
  }
}

.member-count {
  display: inline-block;
  color: #9e9ea6;
  font-size: 0.8rem;
  font-weight: 300;
  margin-top: 2px;
  line-height: 1.13rem;
  cursor: pointer;
  &:hover {
    color: #3aa3e3;
  }
}

.topic-divider {
  color: $divider-color;
  padding: 0rem 0.2rem 0.4rem 0.4rem;
  font-weight: 300;
  font-size: 0.8rem;
}

.topic {
  display: inline-block;
  color: #9e9ea6;
  font-size: 0.8rem;
  font-weight: 300;
  margin-top: 2px;
  line-height: 1.13rem;
  font-style: italic;
  cursor: pointer;
  border: 1px solid #fff;
  padding-left: 3px;
  &:hover {
    padding-right: 20px;
    background: url("../svg/inline-edit.svg") 96% 48% no-repeat;
    z-index: 40;
    border: 1px solid $divider-color;
    border-radius: 4px;
    box-shadow: 0px 2px 2px $divider-color;
  }
}

.more-items {
  float: right;
  margin-top: 8px;
  margin-left: 2px;
  margin-right: 11px;
  
  &:hover {
    svg {
      fill: $hover-blue;
    }
  }
}

.header-icon {
  float: right;
  margin-top: 3px;
  border-radius: 0.25rem;
  height: 32px;
  width: 33px;
  
  &.open {
    background: #f2f2f5;
    z-index: 100;
    svg {
      fill: #2c2d30 !important;
    }
    &:hover {
      background: $divider-color;
    }
  }
}

.show-starred-items {
  
  svg {
    margin-top: 6px;
    margin-left: 5px;
    fill: #2c2d30;
  }
  
  &:hover {
    svg {
      fill: #F8CF34;
    }
  }
}

.show-mentions {
  margin-right: 1px;
  
  svg {
    margin-top: 6px;
    margin-left: 6px;
    fill: #2c2d30;
  }
  
  &:hover {
    svg {
      fill: #eb4d5c;
    }
  }
}

.show-channel-details {
  svg {
    margin-top: 4px;
    margin-left: 5px;
    fill: #a2a2a2;
  }
  
  &:hover {
    svg {
      fill: $icon-blue;
    }
  }
  
  &.open {
    svg {
      fill: #a2a2a2 !important;
    }
    &:hover {
      svg {
        fill: #2c2d30 !important;
      }
    }
  }
}

.channel-settings {
  float: right;
  margin-top: 3px;
  border-radius: 0.25rem;
  height: 32px;
  width: 33px;
  
  svg {
    margin-top: 6px;
    margin-left: 2px;
    fill: #a2a2a2;
  }
  
  &:hover {
    svg {
      fill: $icon-blue;
    }
  }
}

.search-bar {
  float: right;
  width: 134px;
  max-width: 100%;
  height: 30px;
  border: 1px solid $divider-color;
  border-radius: 0.35rem;
  margin-top: 2px;
  margin-right: 8px;
  padding-left: 1.9rem;
  padding-right: 1.9rem;
  background: url("../svg/search.svg") 3% 50% no-repeat;
  font-size: 0.9375rem;
  font-family: inherit;
  color: #555459;
  transition: border-color, width 0.15s;
  
  &:focus, &:hover {
    border-color: $hover-blue;
  }
  
  &:focus {
    width: 211px;
  }
}

.divider-bar {
  float: right;
  display: inline-block;
  width: 1px;
  height: 1.6rem;
  background: $divider-color;
  margin-right: 15px;
  margin-left: 10px;
  margin-top: 5px;
}



.channel-switcher {
  z-index: 10;
  position: absolute;
  background: #4D394B;
  width: 220px;
  height: 100%;
  float: left;
  font-family: 'Lato', Helvetica, sans-serif;
  color: #ab9ba9;
}

.clear {
  clear: both;
}

.cs-header {
  width: 220px;
  height: 61px;
  margin-bottom: 0.25rem;
  cursor: pointer;
  transition: all 0.1s;
  &:hover {
    color: #fff;
    background: $cs-hover-background;
    span {
      color: #fff;
    }
    .bell-inner {
      fill: $cs-hover-background;
    }
  }
}

.cs-header-name {
  font-size: 1.125rem;
  font-weight: 700;
  line-height: 1.375rem;
  display: inline-block;
  color: #fff;
  cursor: pointer;
  margin-top: 0.6rem;
  margin-left: 1rem;
  max-width: 8rem;
}

.cs-header-or {
  color: #ab9ba9;
  font-weight: 300;
  font-size: 0.5rem;
  width: 1rem;
  display:inline-block;
    -webkit-transform:scale(1.6,1); 
    -ms-transform:scale(1.6,1);
    -o-transform:scale(1.6,1); 
    transform:scale(1.6,1);
  margin-left: 0.5rem;
  vertical-align: middle;
  line-height: 0.75rem;
  padding-bottom: 0.3rem;
}

.cs-header-presence {
  margin-left: 1.2rem;
  margin-top: 0.32rem !important;
}

.cs-filled-star {
  float: left;
  margin-left: -2px;
  display: inline-block;
}

.notifications-icon {
  float: right;
  width: 20px;
  height: 48px;
  margin-right: 1rem;
  padding-top: 13px;
  &:hover {
    .bell {
      opacity: 1;
      fill: #fff;
    }
  }
}

.bell {
  opacity: 0.5;
}

.bell-inner {

}

.overflow-ellipses {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}
/* ... */

